; ModuleID = '/home/carl/AnghaBench/reactos/drivers/network/afd/afd/extr_tdiconn.c_TaBuildNullTransportAddress.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/network/afd/afd/extr_tdiconn.c_TaBuildNullTransportAddress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NonPagedPool = common dso_local global i32 0, align 4
@TAG_AFD_TRANSPORT_ADDRESS = common dso_local global i32 0, align 4
@STATUS_SUCCESS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @TaBuildNullTransportAddress(i32 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call i32 @TaLengthOfTransportAddressByType(i32 %6)
  store i32 %7, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  br label %31

11:                                               ; preds = %1
  %12 = load i32, i32* @NonPagedPool, align 4
  %13 = load i32, i32* %4, align 4
  %14 = load i32, i32* @TAG_AFD_TRANSPORT_ADDRESS, align 4
  %15 = call i32* @ExAllocatePoolWithTag(i32 %12, i32 %13, i32 %14)
  store i32* %15, i32** %5, align 8
  %16 = load i32*, i32** %5, align 8
  %17 = icmp ne i32* %16, null
  br i1 %17, label %18, label %29

18:                                               ; preds = %11
  %19 = load i32*, i32** %5, align 8
  %20 = load i32, i32* %3, align 4
  %21 = call i64 @TdiBuildNullTransportAddressInPlace(i32* %19, i32 %20)
  %22 = load i64, i64* @STATUS_SUCCESS, align 8
  %23 = icmp ne i64 %21, %22
  br i1 %23, label %24, label %28

24:                                               ; preds = %18
  %25 = load i32*, i32** %5, align 8
  %26 = load i32, i32* @TAG_AFD_TRANSPORT_ADDRESS, align 4
  %27 = call i32 @ExFreePoolWithTag(i32* %25, i32 %26)
  store i32* null, i32** %2, align 8
  br label %31

28:                                               ; preds = %18
  br label %29

29:                                               ; preds = %28, %11
  %30 = load i32*, i32** %5, align 8
  store i32* %30, i32** %2, align 8
  br label %31

31:                                               ; preds = %29, %24, %10
  %32 = load i32*, i32** %2, align 8
  ret i32* %32
}

declare dso_local i32 @TaLengthOfTransportAddressByType(i32) #1

declare dso_local i32* @ExAllocatePoolWithTag(i32, i32, i32) #1

declare dso_local i64 @TdiBuildNullTransportAddressInPlace(i32*, i32) #1

declare dso_local i32 @ExFreePoolWithTag(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
